refactor: se_engine core and graphics

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ add_library(simple-engine STATIC ${ENGINE_SOURCES})
 # Add dependencies
 add_subdirectory(vendor/SDL2)
 add_subdirectory(vendor/SDL2_image)
-add_subdirectory(vendor/cppvec)
+# add_subdirectory(vendor/cppvec)
 
 # Specify include directories for the Engine library
 target_include_directories(simple-engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
@@ -25,4 +25,5 @@ target_include_directories(simple-engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/incl
 target_include_directories(simple-engine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/source)
 
 # Link libraries to Engine
-target_link_libraries(simple-engine PUBLIC SDL2::SDL2 SDL2_image cppvec)
+#target_link_libraries(simple-engine PUBLIC SDL2::SDL2 SDL2_image cppvec)
+target_link_libraries(simple-engine PUBLIC SDL2::SDL2 SDL2_image)
