--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(simple-engine STATIC ${ENGINE_SOURCES})
 # Add dependencies
 add_subdirectory(vendor/SDL2)
 add_subdirectory(vendor/stb_image)
+add_subdirectory(vendor/cppvec)
 
 # Specify include directories for the Engine library
 target_include_directories(simple-engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
@@ -24,4 +25,4 @@ target_include_directories(simple-engine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/incl
 target_include_directories(simple-engine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/source)
 
 # Link libraries to Engine
-target_link_libraries(simple-engine PUBLIC SDL2::SDL2-static SDL2::SDL2main stb_image)
+target_link_libraries(simple-engine PUBLIC SDL2::SDL2-static SDL2::SDL2main stb_image cppvec)
