--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,7 @@
 	path = vendor/SDL2_image
 	url = https://github.com/libsdl-org/SDL_image.git
 	branch = SDL2
+[submodule "vendor/SDL2_mixer"]
+	path = vendor/SDL2_mixer
+	url = https://github.com/libsdl-org/SDL_mixer.git
+	branch = SDL2
