--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,7 @@
 	path = vendor/SDL2_mixer
 	url = https://github.com/libsdl-org/SDL_mixer.git
 	branch = SDL2
+[submodule "vendor/SMT"]
+	path = vendor/SMT
+	url = git@github.com:nflsilva/simple-media-toolkit.git
+	branch = develop
